# voxelspaceplaydate

./: .gitignore  AUTHORS.md  Cargo.toml  Crank.toml  LICENSE  mistakes_and_learnings.md  readme.md
maps/: LICENSE
processedmaps/: C10W.pgm  C11W.pgm  C12W.pgm  C13.pgm  C14.pgm  C14W.pgm  C15.pgm  C16W.pgm  C17W.pgm  C18W.pgm  C19W.pgm  C1W.pgm  C20W.pgm  C21.pgm  C22W.pgm  C23W.pgm  C24W.pgm  C25W.pgm  C26W.pgm  C27W.pgm  C28W.pgm  C29W.pgm  C2W.pgm  C3.pgm  C4.pgm  C5W.pgm  C6W.pgm  C7W.pgm  C8.pgm  C9W.pgm  D10.pgm  D11.pgm  D13.pgm  D14.pgm  D15.pgm  D16.pgm  D17.pgm  D18.pgm  D19.pgm  D2.pgm  (+11 more)
src/: dither.rs  lib.rs  map.rs
util_asset/: COPYWRITE  Ordered_4x4_Bayer_matrix_dithering.pgm
